[project]
name = "stock-record-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "raylai",email = "chunjueilai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "stock_record_pipeline", from = "src"}]

[tool.poetry.scripts]
Stock_Record_Pipeline = "Stock_Record_Pipeline.main:main"


[tool.poetry.group.test.dependencies]
flake8 = "^7.3.0"
isort = "^8.0.1"
pydocstyle = "^6.3.0"
pre-commit = "^4.5.1"
commitizen = "^4.13.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
